# memeco

./: .gitignore  CHANGES.md  DEVELOPMENT_GUIDE.md  PROJECT_ACHIEVEMENTS.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  apply_migrations.py  db.py  dexscreener.py  helius.py  http_utils.py  ingest_dexscreener.py  pairs.py  prices.py  risk.py  run_analysis_pipeline.py  run_cluster_analysis.py  run_contract_risk.py  run_dev_wallet_audit.py  run_dev_wallet_flow.py  run_liquidity_filter.py  run_market_filter.py  run_wallet_analysis.py  run_wallet_intelligence.py  run_wallet_manipulation.py  run_watchlist_decision.py  run_whale_consistency_audit.py  run_whale_discovery.py  run_whale_price_refresh.py  run_whale_reverse_discovery.py  run_whale_survival.py  run_whale_webhook_sync.py  system.py  tokens.py  validation.py  web_server.py  whale_scoring_logic.py
app/jobs/: scan_state.py  workers.py
app/services/: cluster_analysis_service.py  contract_risk_service.py  dev_wallet_audit_service.py  dev_wallet_flow_service.py  liquidity_filter_service.py  market_filter_service.py  wallet_analysis_service.py  wallet_intelligence_service.py  wallet_manipulation_service.py  watchlist_decision_service.py  whale_consistency_auditor_service.py  whale_discovery_service.py  whale_price_refresh_service.py  whale_reverse_discovery_service.py  whale_signal_service.py  whale_survival_service.py  whale_webhook_service.py
app/static/: dashboard.html  system.html  token_detail.html  wallet_detail.html  whale_radar.html
app/static/shared/: tokens.css  utils.js
migrations/: 001_initial_schema.sql  002_wallet_analysis.sql  003_cluster_analysis.sql  004_wallet_intelligence.sql  005_wallet_manipulation.sql  006_dev_wallet_audit.sql  007_dev_wallet_flow.sql  008_whale_radar.sql  009_whale_reverse_discovery.sql  010_whale_survival_profiles.sql  011_whale_signal_auto_analysis.sql  012_timescale_hypertables.sql  013_extend_raw_snapshots_retention.sql  014_run_scoped_readiness_view.sql
tests/: test_dev_wallet_audit_service.py  test_dev_wallet_flow_service.py  test_dexscreener_pair_selection.py  test_http_utils.py  test_liquidity_filter_service.py  test_risk_batch.py  test_wallet_intelligence_service.py  test_wallet_manipulation_service.py  test_watchlist_decision_service.py  test_webhook_auth.py  test_whale_consistency_auditor_service.py  test_whale_reverse_discovery_service.py  test_whale_scoring_logic.py  test_whale_survival_service.py
web/: package-lock.json  package.json  vite.config.js
web/src/components/: ApiPill.js  BrandBar.js  ErrorCard.js  OpsHud.js  OpsTable.js  TierEmblem.js
web/src/lib/: api.js  dom.js  format.js  time.js
web/src/pages/dashboard/: dashboard.css  index.html  index.js
web/src/pages/system/: index.html  index.js
web/src/pages/token/: index.html  index.js  token.css
web/src/pages/wallet/: index.html  index.js  wallet.css
web/src/pages/whale/: index.html  index.js  whale.css
web/src/styles/: cyberpunk.css  tokens.css
