[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memeco"
version = "0.1.0"
description = "Solana meme-token quant watchlist platform"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.5",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.32.1",
]

[project.scripts]
memeco-server = "app.web_server:main"
memeco-ingest = "app.ingest_dexscreener:cli"
memeco-pipeline = "app.run_analysis_pipeline:cli"
memeco-migrate = "app.apply_migrations:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.static" = ["*.html"]
"app" = ["py.typed"]
