[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memeco"
version = "0.1.0"
description = "Solana meme-token quant watchlist platform"
requires-python = ">=3.10"

# Runtime dependencies are pinned to exact versions so a breaking upstream
# release cannot silently break ingestion or the dashboard. Bump these
# deliberately and re-run the test suite + a manual scan when upgrading.
dependencies = [
    "asyncpg==0.31.0",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "tenacity==9.1.4",
    "uvicorn[standard]==0.48.0",
]

[project.optional-dependencies]
# Developer tooling (lint, types, tests). Install with: pip install -e ".[dev]"
dev = [
    "ruff==0.14.5",
    "mypy==1.18.2",
    "types-python-dateutil==2.9.0.20250516",
]

[project.scripts]
memeco-server = "app.web_server:main"
memeco-ingest = "app.ingest_dexscreener:cli"
memeco-pipeline = "app.run_analysis_pipeline:cli"
memeco-migrate = "app.apply_migrations:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.static" = ["*.html"]
"app" = ["py.typed"]

# ---- ruff ------------------------------------------------------------------
# Linter + formatter. Keep the rule set focused on real bugs and style
# noise; everything codebase-specific stays in DEVELOPMENT_GUIDE.md.
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "memeco.egg-info",
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (undefined names, unused imports)
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "PL",   # pylint subset
    "RUF",  # ruff-specific
]
ignore = [
    "E501",     # line too long — formatter handles, some long SQL strings are clearer wide
    "PLR0911",  # too many return branches — services have legitimate decision trees
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments — risk.add_basic_risk_checks etc are intentional
    "PLR0915",  # too many statements
    "PLR2004",  # magic numbers — many score thresholds are intentionally inline
    "B008",     # function call in default argument — fastapi pattern
    "PLW0603",  # global statement — used for SCAN_STATE
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004",  # tests use lots of literal numbers
]
"app/static/*" = ["ALL"]

# ---- mypy ------------------------------------------------------------------
# Lenient config — the codebase uses dynamic dict shapes for upstream JSON
# bodies. Strict typing would mostly fight the data model. We turn on the
# checks that catch real bugs (no untyped imports of typed deps, return
# type mismatches) and leave the rest off.
[tool.mypy]
python_version = "3.10"
files = ["app"]
exclude = [
    '^memeco\.egg-info/',
    '^tests/',
]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
strict_equality = true

# Suppress noisy rules in service files that work with raw upstream JSON.
[[tool.mypy.overrides]]
module = "app.services.*"
ignore_errors = true
